--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://VonneFide.github.io/vid-lib-mk2",
   "name": "draft02",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+	  "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
